# readthecard

./: .gitignore  .npmrc  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.main.json  tsconfig.node.json  tsconfig.renderer.json  turbo.json  vite.config.ts
.github/workflows/: ci.yml  copilot-setup-steps.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  DEVELOPMENT.md  openjpegjs.md
local-packages/: aokiapp-apdu-utils-0.0.1.tgz  aokiapp-jsapdu-interface-0.0.1.tgz  aokiapp-jsapdu-pcsc-0.0.1.tgz  aokiapp-mynacard-0.0.1.tgz  aokiapp-pcsc-ffi-node-0.0.1.tgz
scripts/: build-jsapdu.js  setup-jsapdu-over-ip.ps1  setup-jsapdu.ps1  setup-jsapdu.sh  setup-voicevox.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  mynacard.rs  voicevox.rs
src/main/: cardReader.ts  main.ts  pcsclite.d.ts  preload.ts  voicevox.ts
src/main/mynacard/: index.ts  kenhojo.ts
src/main/pcsc/: index.ts  platform.ts
src/main/voicevox/: core.ts  index.ts  player.ts  windows-tts.ts
src/renderer/: App.tsx  electron.d.ts  index.html  styles.css  types.d.ts
src/renderer/components/: BasicFourDisplay.tsx  PinInput.tsx  WaitingForCard.tsx
src/renderer/screens/: CardPlacementScreen.tsx  PinInputScreen.tsx  ResultScreen.tsx
src/screens/: CardPlacementScreen.tsx  PinInputScreen.tsx  ResultScreen.tsx
src/types/: jsapdu.d.ts
voicevox/: README.md
