[package]
name = "readthecard"
version = "0.0.1"
description = "マイナンバーカード読み取りアプリ"
authors = ["readthecard"]
edition = "2021"
license = "MIT"

[lib]
name = "readthecard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
tauri = { version = "2.4.1", features = [] }
tauri-plugin-shell = "2.2.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
# PC/SC (Smart Card) support
pcsc = "2.9.0"
# VOICEVOX Core FFI
libloading = "0.8.6"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
